# MatText

./: .gitignore  .langchain.db  .pre-commit-config.yaml  404.html  ACCELERATE_COMMANDS.md  BENCHMARK_ROBOCRYS_README.md  CLEAN_DDP_SOLUTION.md  HOW_TO_RUN_DDP.md  LICENSE  README.md  accelerate_config.yaml  environment.yaml  index.html  meta.yaml  mkdocs.yml  objects.inv  organize.py  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
LLAMA_Generations/llama-70b-gvrh/: finetuned_train_robocrys_rep_mattext_gvrh-train-filtered_fold_0_fold_0_predictions.json  finetuned_train_robocrys_rep_mattext_gvrh-train-filtered_fold_1_fold_1_predictions.json  finetuned_train_robocrys_rep_mattext_gvrh-train-filtered_fold_2_fold_2_predictions.json  finetuned_train_robocrys_rep_mattext_gvrh-train-filtered_fold_3_fold_3_predictions.json
LLAMA_Results_2/: all_results_with_anomaly_analysis.json  anomaly_report.json  llama-2-13b_gvrh_results_with_anomaly_analysis.json  llama-2-13b_kvrh_results_with_anomaly_analysis.json  llama-2-13b_perovskites_results_with_anomaly_analysis.json  llama-2-7b_gvrh_results_with_anomaly_analysis.json  llama-2-7b_kvrh_results_with_anomaly_analysis.json  llama-2-7b_perovskites_results_with_anomaly_analysis.json
api/: index.html
benchmarking/: index.html
conf/: bandgap.yaml  benchmark.yaml  classification.yaml  form_energy.yaml  llm_classify.yaml  llm_sft.yaml  pretrain.yaml
conf/archived_experiments/: config-hydra.yaml  config-potential.yaml  config-sft.yaml  config-smiles.yaml  config.yaml
conf/bg/: atoms_params.yaml  cifp1.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml  zmatrix.yaml
conf/experiments/: config-sft.yaml
conf/form/: atoms.yaml  atoms_params.yaml  cifp1.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml  zmatrix.yaml
conf/group-test/: composition.yaml  slices.yaml
conf/is_metal/: atoms.yaml  atoms_params.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml
conf/llama_8b_bg/: atoms.yaml  atoms_params.yaml  cifp1.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml  zmatrix.yaml
conf/llama_8b_fe/: atoms.yaml  atoms_params.yaml  cifp1.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml  zmatrix.yaml
conf/llama_is_metal/: atoms.yaml  atoms_params.yaml  cifp1.yaml  cifpsym.yaml  composition.yaml  crystal_llm.yaml  local_env.yaml  slices.yaml  zmatrix.yaml
conf/model/: benchmark_example.yaml  benchmark_robocrys_gvrh.yaml  benchmark_robocrys_gvrh_100.yaml  benchmark_robocrys_gvrh_300.yaml  benchmark_robocrys_kvrh.yaml  benchmark_robocrys_kvrh_100.yaml  benchmark_robocrys_kvrh_300.yaml  benchmark_robocrys_perovskites.yaml  benchmark_robocrys_perovskites_300.yaml  classification_example.yaml  finetune_filtered.yaml  finetune_filtered_example.yaml  formation_energy.yaml  llama2_robocrys_gvrh.yaml  llama2_robocrys_gvrh_2.yaml  llama2_robocrys_gvrh_3.yaml  llama2_robocrys_kvrh.yaml  llama2_robocrys_kvrh_2.yaml  llama2_robocrys_kvrh_3.yaml  llama2_robocrys_perovskites.yaml  llama2_robocrys_perovskites_2.yaml  llama2_robocrys_perovskites_3.yaml  llama2_robocrys_perovskites_4.yaml  llama_8b.yaml  llama_classify.yaml  llama_example.yaml  pretrain_example copy.yaml  pretrain_example.yaml  pretrain_filtered_example.yaml  pretrain_other_models.yaml  pretrain_own_data_example.yaml  pretrain_robocrys.yaml  pretrain_robocrys_100k.yaml  pretrain_robocrys_2m.yaml  pretrain_robocrys_300k.yaml
data/27k/: 27k_slice.csv  val.csv
dataset/normalized_data/: test_dielectric_0.json
docker/: Dockerfile
docs/: api.md  benchmarking.md  getting_started.md  index.md  representations.md  tokenizers.md  usage.md
docs/static/: logo.ai
getting_started/: index.html
notebooks/: bert.ipynb  canonicalize.ipynb  clustering.ipynb  composition.ipynb  convert_to_slice.py  dataprep.ipynb  dataset.ipynb  dev_tokenizer.ipynb  example_mattext_representations.ipynb  linear_potential.ipynb  linear_potential_dev.ipynb  llama-batched-eval.ipynb  llama-eval.ipynb  llama.ipynb  llama_score.ipynb  llama_sft.ipynb  matbench.ipynb  materials_project.ipynb  merge.ipynb  nomad_data_prep.ipynb  nomad_prep.ipynb  pipeline.ipynb  plots.ipynb  slice.ipynb  split_data_distribution.ipynb  test.txt  token_counts.ipynb  tokens.ipynb  tutorial.ipynb  vocab.txt
notebooks/example_data/: InCuS2_p1.cif  InCuS2_symmetrized.cif  N2_p1.cif  N2_symmetrized.cif  SrTiO3_p1.cif  SrTiO3_symmetrized.cif  TlCr5Se8_p1.cif  TlCr5Se8_symmetrized.cif
notebooks/processed_data/: gvrh-test-filtered_processed.json
plots/: Snakefile  appendix_architecture.py  appendix_panel_comparison.py  appendix_rt_tokenizer.py  commons.py  figure_2.py  figure_3.py  figure_5.py  figure_6.py  figure_7.py
plots/BERT_SCALEUP/: data_scaling_rt.json  data_size_scaling_results.json
plots/BINNING/: BINNING_consolidated_results.json
plots/CLIFF/: contribution_analysis.json
plots/LLAMA_SCALEUP/: llama_13b.json  llama_70b.json  llama_7b.json
plots/PAPER_JORNAL_01/: fig3.py  figure_02.ipynb  figure_03.ipynb  figure_04.ipynb  lamalab.mplstyle
plots/PAPER_JOURNAL_01/: appendix_figure_tokenizer.ipynb  figure_01.ipynb  palette.py
representations/: index.html
revision-scripts/: 5fold_split.py  matbench_is_metal.py  mp_classification.py  prep_json.py  prep_rep.py  text_rep.py
scripts/: LLAMA_EVAL_README.md  analyze_and_evaluate_llama.py  evaluate_llama_generations.py  fill_robocrys.py  filterdataset.py  linear_potential.py  llama_sft_evals.py  modify_mb_json.py  nomad_postprocess_parallel.py  push.py  qmof_prepare_data.py  query_qmof.py  requirements_cogn.txt  run_benchmark_single_gpu.py  train_cogn_new.py  train_modnet.py  train_modnet_new.py
scripts/LLAMA_Results/: all_results.json  llama-2-13b_gvrh_results.json  llama-2-13b_kvrh_results.json  llama-2-13b_perovskites_results.json  (+3 more)
search/: search_index.json
tests/: test_imports.py  test_tokenizer.py  test_xtal2pot.py
tokenizers/: index.html
(+941 files in other folders)
